# clip-vault

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  clip_vault_db
.github/: README.md  dependabot.yml
.github/workflows/: build.yml  nightly.yml  release-universal.yml  release.yml
clip-vault-app/: Cargo.toml  index.html  package.json  tauri.conf.json  vite.config.ts
clip-vault-app/src/: App.css  App.tsx  main.rs  toast.tsx
clip-vault-app/src 2/: main.rs
clip-vault-app/src-tauri/: Cargo.toml  tauri.conf.json
clip-vault-app/src-tauri/capabilities/: default.json
clip-vault-app/src-tauri/icons/: generate-icons.sh  icon.icns
clip-vault-app/src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
clip-vault-app/src-tauri/src/modules/: clipboard_monitor.rs  mod.rs  system_tray.rs  window_manager.rs
clip-vault-app/src/components/: CopyNotification.tsx  OnboardingFlow.tsx  PasswordPrompt.tsx  PreviewPane.tsx  ResultsList.tsx  SearchInput.tsx  ToastNotification.tsx  UpdateNotification.tsx  index.ts
clip-vault-app/src/hooks/: useClipboardSearch.ts  useClipboardUpdates.ts  useKeyboardNavigation.ts  useVault.ts
clip-vault-app/src/pages/: ToastPage.tsx
clip-vault-app/src/services/: cacheService.ts  clipboardService.ts  updateService.ts  vaultService.ts
clip-vault-app/src/types/: index.ts
clip-vault-app/src/utils/: textUtils.ts
clip-vault-app/static/: settings.html  toast.html
clip-vault-cli/: Cargo.toml
clip-vault-cli/src/: main.rs
clip-vault-cli/src/tui/: app.rs  mod.rs  ui.rs
clip-vault-core/: Cargo.toml
clip-vault-core/src/: error.rs  lib.rs  store.rs
clip-vault-daemon/: Cargo.toml
clip-vault-daemon/src/: main.rs
clip-vault-tests/: Cargo.toml
clip-vault-tests/tests/: integration.rs
