[package]
name = "clip-vault-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite.workspace = true
clip-vault-core = { path = "../clip-vault-core" }
base64.workspace = true
rpassword.workspace = true
sha2.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
humantime.workspace = true
dialoguer.workspace = true
launchctl = "0.3.2"                               # macOS-only crate, no effect on Linux
plist = "1"                                       # lets us build the XML safely

# TUI dependencies
ratatui = "0.28"
crossterm = "0.28"
arboard = "3.4"                                   # For copying to clipboard from TUI
chrono-humanize = "0.2"                           # For human readable timestamps
chrono = { version = "0.4", default-features = false, features = ["std"] }

[lints.clippy]
pedantic = "warn"
