[package]
name = "clip-vault-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
sha2 = "0.10.9"
bincode = { version = "1" }
rusqlite.workspace = true
dirs.workspace = true
base64.workspace = true


[lints.clippy]
pedantic = "warn"
missing-errors-doc = "allow"
