[package]
name = "clip-vault-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
arboard = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = "0.3"
clip-vault-core = { path = "../clip-vault-core" }
base64.workspace = true


[lints.clippy]
pedantic = "warn"
